Revert map colors
Signed-off-by: Marcello Seri <marcello.seri@gmail.com>

--- a/experiments/covid.html
+++ b/experiments/covid.html
@@ -177,11 +177,7 @@
                 locations: unpack(rows, "location"),
                 z: rate(rows),
                 text: unpack(rows, "location"),
-                colorscale: [
-                    [0, 'rgb(242,240,247)'], [0.2, 'rgb(218,218,235)'],
-                    [0.4, 'rgb(188,189,220)'], [0.6, 'rgb(158,154,200)'],
-                    [0.8, 'rgb(117,107,177)'], [1, 'rgb(84,39,143)']
-                ],
+                autoscale: true,
                 colorbar: {
                     title: selected.name,
                     thickness: 20
