--- a/experiments/covid.html
+++ b/experiments/covid.html
@@ -31,6 +31,13 @@
         <h3>Countries (in descending order)</h3>
         <div id='data'></div>
     </div>
+    <div>
+        <h3>Further information</h3>
+        <p>You can find all other graphs and analysis at <a
+                href="https://www.worldometers.info/coronavirus/">worldometer</a> or at <a
+                href="https://ourworldindata.org/coronavirus">our world in data</a> (which is also where this data is
+            coming from).</p>
+    </div>
 
     <script type="text/javascript">
         let today = new Date().toISOString().slice(0, 10);
