Add vaccinations data
Signed-off-by: Marcello Seri <marcello.seri@gmail.com>

--- a/experiments/covid.html
+++ b/experiments/covid.html
@@ -77,6 +77,16 @@
                 fun: function (value) { return parseFloat(value).toFixed(2); }
             },
             {
+                key: "new_vaccinations_smoothed",
+                name: "New vaccinations (smoothed)",
+                fun: function (value) { return (parseFloat(value)).toFixed(2); }
+            },
+            {
+                key: "total_vaccinations_per_hundred",
+                name: "Total vaccinations per 100 (at least 1 jab)",
+                fun: function (value) { return (parseFloat(value)).toFixed(2); }
+            },
+            {
                 key: "population",
                 name: "Population",
                 fun: function (value) { return (parseFloat(value)).toFixed(2); }
@@ -149,6 +159,15 @@
         total_deaths_per_million: "144.555"
         total_tests: ""​​
         total_tests_per_thousand: ""
+        total_vaccinations
+        people_vaccinated
+        people_fully_vaccinated
+        new_vaccinations
+        new_vaccinations_smoothed
+        total_vaccinations_per_hundred
+        people_vaccinated_per_hundred
+        people_fully_vaccinated_per_hundred
+        new_vaccinations_smoothed_per_million
         */
 
         function draw(rawrows, is_redraw) {
@@ -194,7 +213,6 @@
                 }
             };
 
-            console.log(select.value);
             if (["0", "1"].includes(select.value)) {
                 const maxrate = Math.max(...rate(rows));
                 let first = 0.1;
